style(Wallets): Fix styles broken on merge

--- a/src/app/modules/wallets/shared-wallets/components/coming-soon-investments/coming-soon-investments.component.scss
+++ b/src/app/modules/wallets/shared-wallets/components/coming-soon-investments/coming-soon-investments.component.scss
@@ -13,10 +13,6 @@
     &__title {
       margin-top: 16px;
       text-align: center;
-      ion-text {
-        color: var(--ion-color-uxprimary);
-        line-height: 25.81px;
-      }
     }
 
     &__text {
