--- a/src/app/modules/wallets/shared-wallets/components/start-investing/start-investing.component.scss
+++ b/src/app/modules/wallets/shared-wallets/components/start-investing/start-investing.component.scss
@@ -14,6 +14,7 @@
     &__link {
       ion-button {
         margin-left: 0;
+        text-decoration: underline;
       }
     }
   }
